release(2.2.5): npm client conformance — corepack, yarn, npm across all repo modes (#60)
Backport release for the npm client-compatibility work, cut from
`v2.2.4`.

## Why

A production report against 2.2.4: `corepack` fails with `Cannot
destructure property 'tarball' of 'versionMetadata.dist' as it is
undefined`. Two independent defects behind it, both of which only bite
clients that npm's and pnpm's happy paths never exercise:

- `GET /<pkg>/<version>` had no route outside hosted repos, so
proxy/group answered a structurally invalid `{name, modified}` stub with
`200 OK`.
- Tarball URLs were rooted at a group's winning **member**, not the
repository the client addressed — which corepack rejects.

Both are fixed, and verified live against real `corepack`, `npm`,
`pnpm`, `yarn` classic and `yarn` berry binaries across local, proxy and
group repositories.

## What's in it

25 commits: the eight npm commits already on `feat/2.3.0`, the
client-conformance work, two security fixes, and seven further defects
found by live client sweeps — five of them pre-existing (scoped
packuments `404`ing on local repos, `HEAD` on a tarball poisoning the
negative cache since v2.0.0, `npm ping` and the registry root unwired
for proxy/group, empty `404` bodies).

See `CHANGELOG.md` for the full attributed list (2 features, 15 bug
fixes, 3 security).

## ⚠️ Operator notes

- **Requires a DB migration.** `V137` adds the client-base admin
settings; `V138` removes the `upstream_breaker_*` rows that `V136`
seeded, which had been silently shadowing `PANTERA_UPSTREAM_BREAKER_*`
env config since it shipped. Both are additive and run automatically at
startup.
- **Requires a `pantera-ui` redeploy.** The new Settings card is only
reachable via the raw admin API until the UI catches up — not unsafe,
just hidden.
- **This is a feature-bearing patch release** — package signing,
provenance attestations, `npm token`/`profile`, and the DB-backed
forwarded-header/Host settings are new capabilities, hence a